recursion.lessons.recursion.tree.Tree.scala.error
Tree:6: error: not found: value lengthh
		tree(steps-1,shrink*lengthh,angle,shrink)
                                    ^